--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,8 @@ openpyxl>=3.1.0
 # Jupyter
 jupyter>=1.0.0
 notebook>=7.0.0
+nbformat>=5.9.0
+nbconvert>=7.7.0
 
 # Optional: PySpark (uncomment if needed)
 # pyspark>=3.4.0
